SFDC_LD_Packages/objects-layouts/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>