SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Account</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Field</fullName>
                <isActive>false</isActive>
                <label>Field</label>
            </value>
            <value>
                <fullName>Regional</fullName>
                <isActive>false</isActive>
                <label>Regional</label>
            </value>
            <value>
                <fullName>Targeted Account</fullName>
                <isActive>false</isActive>
                <label>Targeted Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>