SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Owner_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Text__c</fullName>
    <formula>Owner.FirstName+ &quot; &quot; +  Owner.LastName</formula>
    <label>Account Owner (Text)</label>
    <type>Text</type>
</CustomField>