SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_URL__c</fullName>
    <description>A URL link to a spreadsheet that contains information regarding an Account Plan. See BIZ-116.</description>
    <label>Account Plan URL</label>
    <type>Url</type>
</CustomField>