SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Qualified_Date__c</fullName>
    <description>Date that the Account was moved into a &apos;Qualified&apos; State, as determined by website sessions, website clicks and ad clicks.</description>
    <label>Account Qualified Date</label>
    <type>Date</type>
</CustomField>