SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Renewal_Date__c</fullName>
    <label>Product Renewal Date</label>
    <type>Date</type>
</CustomField>