SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Structure_ARR__c.field-meta.xml
<CustomField>
    <fullName>Account_Structure_ARR__c</fullName>
    <label>Account Structure ARR</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>