SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Structure_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Structure_Employee_Count__c</fullName>
    <label>Account Structure Employee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>