SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Structure_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Structure_Owner__c</fullName>
    <formula>Account_Structure_Parent_Account__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Structure Owner</label>
    <type>Text</type>
</CustomField>