SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Structure_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Structure_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Structure Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Account Structure Parent Account)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>