SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Structure_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Structure_Parent_ID__c</fullName>
    <formula>Account_Structure_Parent_Account__r.X18_Digit_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Structure Parent ID</label>
    <type>Text</type>
</CustomField>