SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Target_ARR__c.field-meta.xml
<CustomField>
    <fullName>Account_Target_ARR__c</fullName>
    <formula>ARR__c * CSM_Retention_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Account ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>