SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_to_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_to_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account to Contact Lookup</description>
    <label>Account to Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>