SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Account_Worked_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Worked_Date__c</fullName>
    <description>Date that the Account was moved into a &apos;working&apos; status by the rep who is outbounding.</description>
    <inlineHelpText>Date that the Account was moved into a &apos;working&apos; status by the rep who is outbounding.</inlineHelpText>
    <label>Account Worked Date</label>
    <type>Date</type>
</CustomField>