SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Active_Client_MAU_s__c.field-meta.xml
<CustomField>
    <fullName>Active_Client_MAU_s__c</fullName>
    <label>Active Client MAU&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>