SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Active_Seats__c.field-meta.xml
<CustomField>
    <fullName>Active_Seats__c</fullName>
    <label>Active Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>