SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Actual_Growth__c.field-meta.xml
<CustomField>
    <fullName>Actual_Growth__c</fullName>
    <formula>(CSM_Starting_ARR__c+Current_Incremental_ARR__c)/CSM_Starting_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>