SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>All Commodity Volume</description>
    <inlineHelpText>All Commodity Volume (software and services)</inlineHelpText>
    <label>ACV</label>
    <summarizedField>Opportunity.Incremental_ARR__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>notEqual</operation>
        <value>Renewal, Test, POV, Auto Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>