SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Add_On__c.field-meta.xml
<CustomField>
    <fullName>Add_On__c</fullName>
    <label>Add On</label>
    <length>225</length>
    <type>Text</type>
</CustomField>