SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/AdvocateHub__Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>AdvocateHub__Referral_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Influitive Referral Source</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>