SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/AE_Top_10__c.field-meta.xml
<CustomField>
    <fullName>AE_Top_10__c</fullName>
    <label>Top X Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AE Prospect</fullName>
            </value>
            <value>
                <fullName>AE Expand</fullName>
            </value>
            <value>
                <fullName>CSM Retain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>