SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Allowed_MAUs__c.field-meta.xml
<CustomField>
    <fullName>Allowed_MAUs__c</fullName>
    <description>The count of allowed MAUs based on the most updated Closed-Won Opportunity. (Contracts are marked in Active by closed-won Opportunities where the contract is still running based on the Effective start and end dates.)</description>
    <inlineHelpText>The count of allowed MAUs based on the most updated Closed-Won Opportunity. (Contracts are marked in Active by closed-won Opportunities where the contract is still running based on the Effective start and end dates.)</inlineHelpText>
    <label>Allowed MAUs</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>