SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Expansion Amount</description>
    <inlineHelpText>Expansion Amount</inlineHelpText>
    <label>Expand Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>