SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Assigned_BDR__c.field-meta.xml
<CustomField>
    <fullName>Assigned_BDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned BDR</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e1K0000026rbEQAQ</value>
        </filterItems>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e1K000001yZByQAM</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_BDR</relationshipName>
    <type>Lookup</type>
</CustomField>