SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Assigned_BDR_text__c.field-meta.xml
<CustomField>
    <fullName>Assigned_BDR_text__c</fullName>
    <formula>Assigned_BDR__r.FirstName + &quot; &quot; +Assigned_BDR__r.LastName</formula>
    <label>Assigned BDR (text)</label>
    <type>Text</type>
</CustomField>