SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Average_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_NPS_Score__c</fullName>
    <description>Average of Latest NPS Scores on Contacts</description>
    <inlineHelpText>Average of Latest NPS Scores on Contacts</inlineHelpText>
    <label>Average NPS Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>