SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/BDR_Manager__c.field-meta.xml
<CustomField>
    <fullName>BDR_Manager__c</fullName>
    <formula>Assigned_BDR__r.Manager_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDR Manager</label>
    <type>Text</type>
</CustomField>