SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Best_Case__c.field-meta.xml
<CustomField>
    <fullName>Best_Case__c</fullName>
    <label>Best Case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>