SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>Used to sync to saasoptics and finance</description>
    <label>Billing City</label>
    <type>TextArea</type>
</CustomField>