SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <description>Used to sync to saasoptics and finance/billing information</description>
    <label>Billing State</label>
    <type>TextArea</type>
</CustomField>