SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <description>Used for Saasoptics and billing information</description>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>