SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Code__c</fullName>
    <description>Used to sync to saasoptics and finance/billing information</description>
    <label>Billing Zip Code</label>
    <type>TextArea</type>
</CustomField>