SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <label>Business Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Model</valueSetName>
    </valueSet>
</CustomField>