SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CA_Region__c.field-meta.xml
<CustomField>
    <fullName>CA_Region__c</fullName>
    <description>Split of Norcal vs Socal</description>
    <formula>IF(LEFT(BillingPostalCode, 5)=&quot;93426&quot; ||  LEFT(BillingPostalCode, 5)=&quot;93450&quot; || LEFT(BillingPostalCode, 5)=&quot;93512&quot; || LEFT(BillingPostalCode, 5)=&quot;93517&quot; || LEFT(BillingPostalCode, 5)=&quot;93529&quot; || LEFT(BillingPostalCode, 5)=&quot;93541&quot; || LEFT(BillingPostalCode, 5)=&quot;93546&quot; || LEFT(BillingPostalCode, 5)=&quot;93620&quot; || LEFT(BillingPostalCode, 5)=&quot;93635&quot; || LEFT(BillingPostalCode, 5)=&quot;93661&quot; || LEFT(BillingPostalCode, 5)=&quot;93665&quot;,
&quot;NorCal&quot;,
IF(VALUE(LEFT(BillingPostalCode, 3))&lt;939 &amp;&amp; VALUE(LEFT(BillingPostalCode, 3))&gt;899,
&quot;SoCal&quot;,
IF(VALUE(LEFT(BillingPostalCode, 3))&gt;=939 &amp;&amp; VALUE(LEFT(BillingPostalCode, 3))&lt;961,
&quot;NorCal&quot;,
&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA Region</label>
    <type>Text</type>
</CustomField>