SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Case_Study__c.field-meta.xml
<CustomField>
    <fullName>Case_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this account has been approved for a case study.</inlineHelpText>
    <label>Case Study?</label>
    <type>Checkbox</type>
</CustomField>