SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/cbit__Clearbit__c.field-meta.xml
<CustomField>
    <fullName>cbit__Clearbit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clearbit</label>
    <referenceTo>cbit__Clearbit__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>