SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/cbit__CreatedByClearbit__c.field-meta.xml
<CustomField>
    <fullName>cbit__CreatedByClearbit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Clearbit</label>
    <type>Checkbox</type>
</CustomField>