SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Charter__c.field-meta.xml
<CustomField>
    <fullName>Charter__c</fullName>
    <inlineHelpText>How well are the success criteria defined and measured?
What is the adoption plan?
Does the champion have a strong position in the organization?
1=low, 5= high</inlineHelpText>
    <label>Charter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_5</valueSetName>
    </valueSet>
</CustomField>