SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Child_Entity_Employees__c.field-meta.xml
<CustomField>
    <fullName>Child_Entity_Employees__c</fullName>
    <label>Child Entity Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>