SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Chorus_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Chorus_Competitor__c</fullName>
    <label>Chorus Competitor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>