SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Churned_Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Churned_Opp_Count__c</fullName>
    <description>Will be 1 if there is a churn Opportunity against the Account</description>
    <inlineHelpText>Will be 1 if there is a churn Opportunity against the Account</inlineHelpText>
    <label>Churned Opp Count</label>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Churn</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>