SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CMau_ARR__c.field-meta.xml
<CustomField>
    <fullName>CMau_ARR__c</fullName>
    <label>CMau ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>