SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Collectability__c.field-meta.xml
<CustomField>
    <fullName>Collectability__c</fullName>
    <label>Collectability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract does not exist</fullName>
            </value>
            <value>
                <fullName>Contract exists</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>