SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Commit__c.field-meta.xml
<CustomField>
    <fullName>Commit__c</fullName>
    <label>Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>