SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Company_ARR__c.field-meta.xml
<CustomField>
    <fullName>Company_ARR__c</fullName>
    <description>Company&apos;s Annual Revenue (pulled from Clearbit)</description>
    <inlineHelpText>Company&apos;s Annual Revenue (pulled from Clearbit)</inlineHelpText>
    <label>Company ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>