SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Company_Raised__c.field-meta.xml
<CustomField>
    <fullName>Company_Raised__c</fullName>
    <description>Amount company raised during their last funding (pulled from Clearbit)</description>
    <inlineHelpText>Amount company raised during their last funding (pulled from Clearbit)</inlineHelpText>
    <label>Company Raised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>