SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Company_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Company_Revenue_Range__c</fullName>
    <label>Company Revenue Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>