SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Company_Tech__c.field-meta.xml
<CustomField>
    <fullName>Company_Tech__c</fullName>
    <inlineHelpText>Company&apos;s tech stack (pulled from Clearbit)</inlineHelpText>
    <label>Company Tech</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>