SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <description>Pulled from Zoominfo</description>
    <inlineHelpText>Pulled from Zoominfo</inlineHelpText>
    <label>Company Type</label>
    <length>225</length>
    <type>Text</type>
</CustomField>