SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <description>created to pull contact method onto opps if created from a contact. Also used in Process Builder (New Opp Created)</description>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_method</valueSetName>
    </valueSet>
</CustomField>