SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CS_Engagement__c.field-meta.xml
<CustomField>
    <fullName>CS_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS Engagement</label>
    <type>Checkbox</type>
</CustomField>