SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CS_Territory__c.field-meta.xml
<CustomField>
    <fullName>CS_Territory__c</fullName>
    <inlineHelpText>Territory for Customer Success</inlineHelpText>
    <label>CS Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>