SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CSE__c.field-meta.xml
<CustomField>
    <fullName>CSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The CSE that is mapped to this account.</description>
    <inlineHelpText>”Formerly Customer Success Engineer”</inlineHelpText>
    <label>Solutions Architect</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Manager.UserRoleId</field>
            <operation>equals</operation>
            <value>00E1K000001VLAA</value>
        </filterItems>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>equals</operation>
            <value>00E1K000001VLAA</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsCSE</relationshipName>
    <type>Lookup</type>
</CustomField>