SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CSM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>CSM_Assigned__c</fullName>
    <label>CSM Assigned</label>
    <type>Date</type>
</CustomField>