SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CSM_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>CSM_Name_Text__c</fullName>
    <description>Pull our CSM name for zendesk sync</description>
    <formula>Customer_Success_Manager__r.FirstName +&quot; &quot;+ Customer_Success_Manager__r.LastName</formula>
    <label>CSM Name Text</label>
    <type>Text</type>
</CustomField>