SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CSM_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>CSM_Next_Steps__c</fullName>
    <label>CSM Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>