SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CSM_Removed__c.field-meta.xml
<CustomField>
    <fullName>CSM_Removed__c</fullName>
    <label>CSM Removed</label>
    <type>Date</type>
</CustomField>