SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CSM_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>CSM_Renewal_Date__c</fullName>
    <description>Pull from the formula renewal date field but CSM have edit access</description>
    <inlineHelpText>Use this field to rewrite the field above (Renewal Date) if incorrect.</inlineHelpText>
    <label>CSM Renewal Date</label>
    <type>Date</type>
</CustomField>