SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CSM_Retention_Target__c.field-meta.xml
<CustomField>
    <fullName>CSM_Retention_Target__c</fullName>
    <formula>Customer_Success_Manager__r.Retention_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM Retention Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>