SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CSM_Starting_ARR__c.field-meta.xml
<CustomField>
    <fullName>CSM_Starting_ARR__c</fullName>
    <formula>ARR__c* of_Year_Owned_by_CSM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM Starting ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>