SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CSM_Starting_ARR_Manual__c.field-meta.xml
<CustomField>
    <fullName>CSM_Starting_ARR_Manual__c</fullName>
    <label>CSM Starting ARR (Manual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>