SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/CSM_Temporary_Assignment__c.field-meta.xml
<CustomField>
    <fullName>CSM_Temporary_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSM Temporary Assignment</label>
    <type>Checkbox</type>
</CustomField>