SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Current_CSM_Pro_Rated_ARR__c.field-meta.xml
<CustomField>
    <fullName>Current_CSM_Pro_Rated_ARR__c</fullName>
    <inlineHelpText>ARR of Opps Closed between Current CSM Assigned Date and EOFY</inlineHelpText>
    <label>Current CSM ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>