SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Current_CSM_Pro_Rated_MRR__c.field-meta.xml
<CustomField>
    <fullName>Current_CSM_Pro_Rated_MRR__c</fullName>
    <inlineHelpText>MRR of Opps Closed between Current CSM Assigned Date and EOFY</inlineHelpText>
    <label>Current CSM MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>