SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Current_Incremental_ARR__c.field-meta.xml
<CustomField>
    <fullName>Current_Incremental_ARR__c</fullName>
    <label>Current Incremental ARR</label>
    <summarizedField>Opportunity.Incremental_ARR__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Expansion Add-on, Expansion New Product, Renewal, Auto Renewal</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>7W - Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterThan</operation>
        <value>1/31/2020</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>