SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Current_MRR__c.field-meta.xml
<CustomField>
    <fullName>Current_MRR__c</fullName>
    <label>Current MRR</label>
    <summarizedField>Opportunity.Calc_MRR__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>7L - Closed Lost, Duplicate, DQ - Disqualified, RE - Recycle, 00 - Kicked Back</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CS_Manager__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>